--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ color: #1b52a7 !important;
                         <nav id="site-navigation" class="main-navigation" role="navigation" aria-label="主菜单">
                             <ul id="primary-menu" class="primary-menu">
 <li id="menu-item-9690" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-9690"><a href="/category/%e5%85%ac%e5%91%8a%e6%9d%bf"><span>公告板</span></a></li>
-<li id="menu-item-9724" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9724"><a href="/特定题材"><span>特定題材</span></a></li>
+<li id="menu-item-9724" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9724"><a href="/tdtc"><span>特定題材</span></a></li>
 <li id="menu-item-9730" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-9730"><a href="/category/%e5%a4%a7%e7%a6%8f%e9%9f%b3%e6%9b%b8"><span>大福音書</span></a></li>
 <li id="menu-item-9731" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-9731"><a href="/category/%e8%bc%94%e5%8a%a9%e5%88%86%e9%a1%9e"><span>輔助分類</span></a></li>
 <li id="menu-item-9732" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9732"><a href="/%e5%86%b0%e6%81%8b"><span>死亡冰戀</span></a></li>
